TA chapter version 1

--- a/chapter_introduction.tex
+++ b/chapter_introduction.tex
@@ -31,7 +31,7 @@ Although the regions labelled here generally hold true in terms of the statistic
 \end{figure}
 
 % Figure: A cartoon depicting various problematic, yet biologically observed topologies and lengths that the alpha helices can adopt.
-From left to right: a typical and traditional \gls{tmh}, an exceptionally long \gls{tmh}, a \gls{tmh} that lies flat in the interface region, a kinked helix that enters and exits the bilayer on the same leaflet, a \gls{tmh} that is not long enough to span the entire membrane.
+From left to right: a typical and traditional \gls{tmh}, an exceptionally long \gls{tmh}, a \gls{tmh} that lies flat in the interface region, a kinked helix that enters and exits the bi-layer on the same leaflet, a \gls{tmh} that is not long enough to span the entire membrane.
 These exceptional formations present a challenge for topology predictions of the loop regions.
 
 The language used to describe \gls{tmh}s varies somewhat across the literature, primarily due to a changing understanding of \gls{tmh} general structure and relevance to function over the last 15 years or so.
@@ -40,11 +40,11 @@ There is a general composition of a \gls{tmh} despite specific protein and membr
 %This paragraph should certainly be changed to the updated one from the manuscript.
 A study by Baeza\---Delgado \textit{ et al.} from 2013~\cite{Baeza-Delgado2013} looked at \gls{tmh}s in 170 integral membrane proteins from a manually maintained database of experimentally confirmed \gls{tmp}s; MPTopo~\cite{Jayasinghe2001}.
 The group examined the distribution of residues along the \gls{tmh}s.
-As expected, half of the natural amino acids are equally distributed along ransmembrane (TM) helices whereas aromatic, polar, and charged amino acids along with proline are biasedly near the flanks of the TM helices~\cite{Baeza-Delgado2013}.
+As expected, half of the natural amino acids are equally distributed along transmembrane (TM) helices whereas aromatic, polar, and charged amino acids along with proline are biasedly near the flanks of the TM helices~\cite{Baeza-Delgado2013}.
 It has been noted that transitions between the polar and non-polar groups at the ends of the hydrophobic core occur in a more defined edge on the cytoplasmic side than at the extracytoplasmic face when counting from the middle of the helix outwards~\cite{Baeza-Delgado2013}.
 This is probably reflecting the different lipid composition of both leaflets of biological membranes~\cite{Baeza-Delgado2013}.
 
-A previous study by Sharpe \textit{et al.} from 2010 used 1192 human and 1119 yeast predicted \gls{tmh}s that were not structurally validated to further explore the difference in \gls{tmh} and leaflet structure by exploiting the evolutionarily conserved sequence differences between the \gls{tmh} in the inner and outer leaflets~\cite{Sharpe2010}.
+A previous study by Sharpe \textit{et al.} from 2010 used 1192 human and 1119 yeast predicted \gls{tmh}s that were not structurally validated to further explore the difference in \gls{tmh} and leaflet structure by exploiting the evolutionary conserved sequence differences between the \gls{tmh} in the inner and outer leaflets~\cite{Sharpe2010}.
 \gls{tmh}s from vertebrates and invertebrates were found to be reasonably similar compositionally.
 The differences in consensus \gls{tmh} structure implies that there are general differences between the membranes of the Golgi and \gls{er}.
 The abundance of serines in the region following the lumenal end of Golgi \gls{tms}s probably reflects the fact that this part of many Golgi enzymes forms a flexible linker that tethers the catalytic domain to the membrane~\cite{Sharpe2010}.
@@ -69,20 +69,20 @@ The Tyrosine side chain is a six-membered aromatic ring with an –OH group atta
 Tryptophan has two aromatic rings that are fused into one large hydrophobic ring-structure.
 Phenylalanine, although aromatic, is completely hydrophobic, and is found in the trans-membrane part rather than the interfacial parts of MPs.
 The classical explanation for the preference of Tyrosine and Tryptophan to reside in the interfacial regions is their dipolar character.
-The side chain must simply seek a compromise.
+The side chain must simply seekmpromise.
 This can be achieved by burying the aromatic ring close to, or within, the hydrophobic core, while the hydrophilic part can interact with the polar lipid head-groups at the interface.
 Other factors such as the aromaticity, size, rigidity and shape of Tryptophan, rather than its dipolar character, has also been suggested as the primary reasons for its interfacial preference.
 %Perhaps, as suggested by You \textit{et al.}, it is a balance of all these forces that explains the interfacial preference of Tyrosine and Tryptophan. %This NEEDS referencing!
 
-\subsubsection{Snorkeling}
+\subsubsection{Snorkelling}
 
 Broadly speaking, \gls{tmh}s are non-polar.
 However, some contain polar and charged residues in the helix itself.
 Whilst this might seem thermodynamically unstable at first glance, a molecular dynamic feature called the ``snorkel'' effect explains in part how this is possible~\cite{Chamberlain2004, Strandberg2003}.
-Simply put, the snorkelling effect involves the long flexible side chain of leucine reaching the water interface region to interact with the polar headgroups of the bilayer even when the $\alpha$ helix backbone is pulled into the hydrophobic layer~\cite{Krishnakumar2007}.
+Simply put, the snorkelling effect involves the long flexible side chain of leucine reaching the water interface region to interact with the polar head-groups of the bilayer even when the $\alpha$ helix backbone is pulled into the hydrophobic layer~\cite{Krishnakumar2007}.
 This has also been suggested to allow helices to adapt to varying thicknesses of the membrane~\cite{Kandasamy2006}.
 More recently it was found that although in simulations the energetic cost of arginine at the centre of the \gls{tmh} is large, in vivo experimentation with the Sec61 translocon reveals a much smaller penalty~\cite{Ulmschneider2017}.
-That same study also found that in simulations, snorkeling, bilayer deformation, and peptide tilting combined to to be sufficient to lower the thermodynamic stability penalty of arginine insertion so that hydrophoic \gls{tmh}s with a central arginine residue will readily insert into the membrane.
+That same study also found that in simulations, snorkelling, bilayer deformation, and peptide tilting combined to to be sufficient to lower the thermodynamic stability penalty of arginine insertion so that hydrophobic \gls{tmh}s with a central arginine residue will readily insert into the membrane.
 
 
 \subsection{Hydrophobicity of Trans-membrane Segments}\label{ssection:hydrophobicityscales}
@@ -115,7 +115,7 @@ A scale based on the water\---vapour transfer free energy and the interior-exter
 \subsubsection{Hessa's Biological Hydrophobicity Scale}
 
 This is arguably the most biologically relevant scale~\cite{Peters2014}, and is often called the ${\Delta G}_{app}^{aa}$ scale.
-The scale is based on an experimental method where the free energy exchange during recognition of designed polypeptide \gls{tmh} by the \gls{er} Sec61 translocon occurred~\cite{Hessa2005}.
+The scale is based on an experimental method where the free energy exchange during recognition of designed poly-peptide \gls{tmh} by the \gls{er} Sec61 translocon occurred~\cite{Hessa2005}.
 These measurements were then used to calculate a “biological hydrophobicity scale.” The original study reported positional variance in some residues and is strictly valid only for residues in the core of the \gls{tmh}.
 A more refined study quantified the positional dependencies of each amino acid type~\cite{Hessa2007}.
 
@@ -128,7 +128,7 @@ This scale is fundamentally based on the partitioning of host-guest pentapeptide
 
 The Eisenberg scale is a consensus scale based on the earlier scales from Tanford~\cite{Nozaki1971}, Wolfenden~\cite{Rose1993}, Chothia~\cite{Chothia1976}, Janin~\cite{Janin1979},  Wolfenden~\cite{Wolfenden1981}, and the von Heijne scale~\cite{VonHeijne1979}.
 The scales are normalised according to serine~\cite{Eisenberg1984}.
-The automatic TRANSMEM annotation currently used in Uniprot is according to TMHMM~\cite{Krogh2001}, Memsat~\cite{Jones2007}, Phobius~\cite{Kall2004} and the hydrophobic moment plot method of Eisenberg and coworkers~\cite{Eisenberg1984}.
+The automatic TRANSMEM annotation currently used in UniProt is according to TMHMM~\cite{Krogh2001}, Memsat~\cite{Jones2007}, Phobius~\cite{Kall2004} and the hydrophobic moment plot method of Eisenberg and coworkers~\cite{Eisenberg1984}.
 
 \subsection{Sequence Complexity}
 
@@ -157,14 +157,14 @@ Broadly speaking, the information theory entropy of a linguistic string can be d
 Where H is the entropy of a sequence (S), and $p_i$ is the probability of a character $i$ through each position (n) in S. This allows us to quantify the average relative information density held within a string of information~\cite{Shannon1948}.
 
 The compositional complexity is measured over sequence windows. If we have an amino acid composition $\{{{n}_{i}}{\}}_{i}={\min{i}},\ldots,{\max{i}}$ with a window length of $L=\Sigma {n}_i $, the total number of sequences can be calculated by dividing a factorial of the length by the product of the compositions, i.e\  $ N = L!/\Pi{n}_i $ possible sequences.
-The SEG algorithm~\cite{WOOTTON1994269, Wootton1996} identifies subsegments of the raw region which have the lowest probability.
+The SEG algorithm~\cite{WOOTTON1994269, Wootton1996} identifies sub-segments of the raw region which have the lowest probability.
 The algorithm searches for and concatenates sub-threshold segments for the Shannon entropy-like term in equation~\ref{shannonentropyliketerm}
 
 \begin{equation} \label{shannonentropyliketerm}
 {K}_{2}=-\Sigma\frac{n_i}{L}\log\frac{n_i}{L}
 \end{equation}
 
-The lowest probability subsegment can be defined as $ K_1=\log N/L $.
+The lowest probability sub-segment can be defined as $ K_1=\log N/L $.
 By altering the window lengths, and the thresholds SEG can be optimised to search for subtle compositional deviations, such as coil-coiled regions.
 
 \section{$\alpha$ Helices In Membranes }
@@ -176,9 +176,9 @@ Throughout the 1990s the concept of a \gls{tmh} was simple and fairly assured: t
 By 2006, crystallography had elucidated more than 60 high-resolution structures.
 Although the classic \gls{tmh} structures were broadly prevalent, these structures contained a plethora of unusual \gls{tmh}s.
 \gls{tms}s are capable of partial spanning of the membrane, spanning using oblique angles, and even lying flat on the membrane surface~\cite{VonHeijne2006, Elofsson2007}; the classical model was incomplete.
-Even recently, there is a contingency in the  membrane biology field that despite progress over the last decade there is still a lack of information regarding the relationship between \gls{tmh} sequences and function, \gls{tmh} structure, intra-membrane \gls{tmp} assembly, and the behavior of \gls{tmh}s in the lipid bilayer; the native biological environment of \gls{tmh}s~\cite{Ladokhin2015}.
+Even recently, there is a contingency in the  membrane biology field that despite progress over the last decade there is still a lack of information regarding the relationship between \gls{tmh} sequences and function, \gls{tmh} structure, intra-membrane \gls{tmp} assembly, and the behaviour of \gls{tmh}s in the lipid bilayer; the native biological environment of \gls{tmh}s~\cite{Ladokhin2015}.
 
-Furthermore, the insertion and formation of the unusually orientated \gls{tmh}s and of the more traditional \gls{tmh}s have been shown to be underpinned by complex thermodynamic equilibriums and electrostatic interactions~\cite{Cymer2015, Elisa2012, Ismail2015}.
+Furthermore, the insertion and formation of the unusually orientated \gls{tmh}s and of the more traditional \gls{tmh}s have been shown to be underpinned by complex thermodynamic equilibrium and electrostatic interactions~\cite{Cymer2015, Elisa2012, Ismail2015}.
 As well as being a biophysically convoluted system, \gls{tmh}s are biologically functional beyond anchorage in many cases.
 \gls{tms}s have been identified as regulators of protein quality control and trafficking mechanisms, shifting the idea away from \gls{tmh}s broadly exclusively functioning as anchors~\cite{Hessa2011}, and crucially this function beyond anchorage can be revealed by sensitive, careful analysis of the sequence information alone~\cite{Wong2012}.
 
@@ -215,7 +215,7 @@ These proteins allow biochemical pathways that traverse the various biological m
 %citation for drug targets
 
 %Function is a result of the structure, and here the structure and sequence are supposedly very relatable.
-The relationship between the membrane and \gls{tmp}s is underpinned by complex thermodynamic and electrostatic equilibria.
+The relationship between the membrane and \gls{tmp}s is underpinned by complex thermodynamic and electrostatic equilibrium.
 Once inserted the protein doesn't leave the membrane as a result of the \gls{tmh} being very hydrophobic.
 This hydrophobicity and the hydrophobicity of the lipid tails means that they self-associate and this association is entropically driven by water.
 Another way of describing it is that they fiercely dissociate from the water.
@@ -232,7 +232,7 @@ The outline that MPs are vital for relaying information and chemistry across the
 
 %At some point the membrane phases should be discussed.
 %Similar to the diagram here perhaps: http://popups.ulg.ac.be/1780-4507/index.php?id=6568
-The compartmentalization of cellular biochemistry is arguably one of the most significant events to have occurred in evolution and is certainly one of the fundamental prerequisites for life~\cite{Koshland2002}.
+The compartmentalisation of cellular biochemistry is arguably one of the most significant events to have occurred in evolution and is certainly one of the fundamental prerequisites for life~\cite{Koshland2002}.
  The proteins that allow life to use this biochemical barrier are perhaps equally important.
 Together, the lipid bilayer and proteins therein allow complex biochemical systems that facilitate life as we know it.
 
@@ -251,7 +251,7 @@ In other words, the bilayer forms from these phospholipid molecules due to the f
 Furthermore, the bilayer maximises van der Waals interactions between the closely-packed hydrocarbon chains, which contributes to the stability of the bilayer.
 This can be seen even in relatively early \gls{md} simulations~\cite{Goetz1998}.
 
-\subsubsection{Differenes in Membrane Compositions}
+\subsubsection{Differences in Membrane Compositions}
 
 It has been known for some time that the outer membranes of Gram-negative bacteria are asymmetric in terms of lipid composition.
 The outer membranes contain lipopolysaccharide, whilst the inner is a mixture of approximately 25 phospholipid types.
@@ -314,7 +314,7 @@ It has long been understood that this method is essentially the ~\gls{srp} recog
 
 Crystal structures showed the \gls{srp} targets the nascent peptide chain for membrane insertion via a GTPase in both the \gls{srp} and \gls{sr}, that is initially associated with the translocon machinery, coming together to form a complex thus bringing the nascent peptide chain in proximity to the translocon~\cite{Shan2005}.
 Mutant studies of\gls{srp}~\cite{Shan2005} revealed key discrete conformational stages.
-These are the specific recognition of signal sequences on cargo proteins, the targetting of the package to the membrane, the handing over of the cargo to the translocation machinery all the while maintaining precise spatial and temporal coordination of each molecular event~\cite{Saraogi2011}.
+These are the specific recognition of signal sequences on cargo proteins, the targeting of the package to the membrane, the handing over of the cargo to the translocation machinery all the while maintaining precise spatial and temporal coordination of each molecular event~\cite{Saraogi2011}.
 
 
 \subsection{Post-Translational Translocation}
