--- a/thesis.tex
+++ b/thesis.tex
@@ -82,9 +82,9 @@
 
 
 \prefacesection{Abstract}
-Non\---polar helices figure prominently in structural biology, from the first protein structure (myoglobin) through trans-membrane segments, to current work on recognition of protein trafficking and quality control. Trans-membrane \(\alpha\) helix containing proteins makep around a quarter of all proteins, as well as two-thirds of drug targets, and contain some of the most critical proteins required for life as we know it. Yet they are fundamentally difficult to study experimentally. This is in part due to the very features that make them so biologically influential: their non\---polar trans-membrane helix regions. What is missing in the current literature is a nuanced understanding of the complexities of the helix composition beyond a hydrophobic region of around 20 residues. Currently, it is known that the properties of trans-membrane protein \(\alpha\) helices underpin membrane protein insertion mechanisms.
+Non\---polar helices figure prominently in structural biology, from the first protein structure (myoglobin) through trans-membrane segments, to current work on recognition of protein trafficking and quality control. Trans-membrane \(\alpha\) helix containing proteins make around a quarter of all proteins, as well as two-thirds of drug targets, and contain some of the most critical proteins required for life as we know it. Yet they are fundamentally difficult to study experimentally. This is in part due to the very features that make them so biologically influential: their non\---polar trans-membrane helix regions. What is missing in the current literature is a nuanced understanding of the complexities of the helix composition beyond a hydrophobic region of around 20 residues. Currently, it is known that the properties of trans-membrane protein \(\alpha\) helices underpin membrane protein insertion mechanisms.
 
-By leveraging large datasets of trans-membrane proteins, this thesis is focused on characterising features of \(\alpha\) helices en masse, particularly regarding their topology, membrane\---protein interactions, and intramembrane protein interactions.
+By leveraging large data-sets of trans-membrane proteins, this thesis is focused on characterising features of \(\alpha\) helices en masse, particularly regarding their topology, membrane\---protein interactions, and intramembrane protein interactions.
 
 In this thesis, I make the argument that there are different classifications of trans-membrane \(\alpha\) helices. These have markedly different evolutionary pressures, these different classes interact differently with the membrane, and each class serve the protein differently.
 
@@ -101,11 +101,11 @@ Around a third of our genome codes for proteins that are permanently embedded in
 In this thesis, we focus particularly on the parts of the protein that are embedded in the water repelling cellular skin.
 Traditionally, these regions are hard to study, because we must first remove them from the cellular wall, which causes problems since the embedded regions also repel water and this often causes them to stick to one another, making them hard to work with in a laboratory setting.
 
-We analyse thousands of proteins to further our understanding of electrical charges in the embedded regions and find that negative charge on the outside of the cell has been evolutionarily selected across bacteria, animals, and plants.
+We analyse thousands of proteins to further our understanding of electrical charges in the embedded regions and find that negative charge on the outside of the cell has been evolutionary selected across bacteria, animals, and plants.
 This is especially true for regions that specifically anchor the protein into the cellular wall.
  Where the embedded regions have additional function, for example ferrying something in or out of the cell, the negative charge ``bias'' can no longer be seen.
 
- This thesis demonstrates the radically different evolutionary story that  transmembrane regions have compared to other proteins; the sacrifices they make for their stability in order to maintain their function, and their optmisation through evolutionary timescales to become mould to the membrane as best they can.
+ This thesis demonstrates the radically different evolutionary story that  transmembrane regions have compared to other proteins; the sacrifices they make for their stability in order to maintain their function, and their optimisation through evolutionary timescales to become mould to the membrane as best they can.
 
  %But what is the point, what have we learned.
 
