--- a/chapter_tmcomposition.tex
+++ b/chapter_tmcomposition.tex
@@ -5,8 +5,8 @@ The description of a~\gls{tmh} remains incomplete.
 The understanding of~\gls{tmp} topology is erroneous, and despite a wealth of structures, the general model of helix-helix and helix-lipid interactions remains speculative and requires a great deal of intensive analysis to generate a working model of a particular~\gls{tmp}.
 
 The work presented in this chapter is an expanded version of published work~\cite{Baker2017}.
-We use advanced statistical analysis to analyze large sequence datasets that have rich topological annotation.
-By analyzing these sequences in the context of anchorage, we find that some~\gls{tmh}s are confined to biological constraints of the membrane, whereas others that likely contain function beyond anchorage, are less conforming to the membrane.
+We use advanced statistical analysis to analyse large sequence datasets that have rich topological annotation.
+By analysing these sequences in the context of anchorage, we find that some~\gls{tmh}s are confined to biological constraints of the membrane, whereas others that likely contain function beyond anchorage, are less conforming to the membrane.
 Specifically, there is further elaboration of statistical definitions in the methods than in the published paper.
 
 \section{Abstract}
@@ -16,8 +16,8 @@ As the idea of positive residues inside the cytoplasm emerged during the late 19
 It was shown that removing a single lysine residue reversed the topology of a model \textit{erichia coli} protein, whereas much higher numbers of negatively charged residues are needed to reverse topology~\cite{Nilsson1990}.
 One would also expect to see a skew in negatively charged distribution if a cooperation between oppositely charged residues orientated a~\gls{tmh}, however there is no conclusive evidence in the literature for an opposing negatively charged skew~\cite{Granseth2005, Nilsson2005a, Sharpe2010, Baeza-Delgado2013, Pogozheva2013}.
 However, in \textit{E.
-coli} negative residues do experience electrical pulling forces when traveling through the SecYEG translocon indicating that negative charges are biologically relevant~\cite{Ismail2015}.
-In this chapter, we explore the literature surroudning charged residue distribution in the~\gls{tmh}, and demonstrate that the ``negative-outside'' skew exists in anchoring~\gls{tmh}s
+coli} negative residues do experience electrical pulling forces when travelling through the SecYEG translocon indicating that negative charges are biologically relevant~\cite{Ismail2015}.
+In this chapter, we explore the literature surrounding charged residue distribution in the~\gls{tmh}, and demonstrate that the ``negative-outside'' skew exists in anchoring~\gls{tmh}s
 
 \section{Introduction}
 
@@ -29,7 +29,7 @@ From the biological function point of view, many~\gls{tmh}s have multiple roles 
 As these additional biological functions are mirrored in the~\gls{tmh}s’ sequence patterns,~\gls{tmh}s can be classified as simple (just hydrophobic anchors) and complex sequence segments~\cite{Wong2010, Wong2011, Wong2012}.
 
 The relationship between sequence patterns in and in the vicinity of~\gls{tmh}s and their structural and functional properties, as well as their interaction with the lipid bilayer membrane, has been a field of intensive research in the last three decades~\cite{Ladokhin2015}.
-Besides the span of generally hydrophobic residues in the~\gls{tmh}, there are other trends in the sequence such as with a saddle-like distribution of polar residues (depressed incidence of charged residues in the~\gls{tmh}  itself), an enriched occurrence of positively charged residues in the cytosolic flanking regions as well as an increased likelihood of tryptophan and tyrosine at either flank edge~\cite{Sharpe2010, VonHeijne1986,VonHeijne1988,VonHeijne1989, Baeza-Delgado2013, Granseth2005}.
+Besides the span of generally hydrophobic residues in the~\gls{tmh}, there are other trends in the sequence such as with a saddle-like distribution of polar residues (depressed incidence of charged residues in the~\gls{tmh}  itself), an enriched occurrence of positively charged residues in the cytosolic flanking regions as well as an increased likelihood of tryptophan and Tyrosine at either flank edge~\cite{Sharpe2010, VonHeijne1986,VonHeijne1988,VonHeijne1989, Baeza-Delgado2013, Granseth2005}.
 Such properties vary somewhat in length and intensity between various biological organelle membranes, between prokaryotes and eukaryotes~\cite{Ojemalm2013} and even among eukaryotic species studied due to slightly different membrane constraints~\cite{Sharpe2010, Pogozheva2013}.
 These biological dispositions are exploitable in terms of~\gls{tm} region prediction in query protein sequences~\cite{Beuming2004, Zhao2006} and tools such as the quite reliable TMHMM~\cite{Krogh2001,Sonnhammer1998}, Phobius~\cite{Kall2004, Kall2007} or DAS-TMfilter represent today’s prediction limit of~\gls{tmh}s’ hydrophobic cores within the protein sequence~\cite{Cserzo2002, Cserzo2004, Kall2002}.
 The prediction accuracy for true positives and negatives is reported to be close to 100\% and the remaining main cause of false positive prediction are hydrophobic \(\alpha\)--helices completely buried in the hydrophobic core of proteins.
@@ -41,7 +41,7 @@ As a trend, the ``positive-inside rule'' has since been confirmed with statistic
 However, more recent evidence suggests that, in thylakoid membranes, the ``positive-inside rule'' is less applicable due to the co-occurrence of aspartic acid and glutamic acid residues together with positively charged residues~\cite{Pogozheva2013}.
 
 The positive-inside rule also received support from protein engineering experiments that revealed conclusive evidence for positive charges as a topological determinant~\cite{VonHeijne1989, Beltzer1991, Kida2006, Nilsson1990}.
-Mutational experiments demonstrated that charged residues, when inserted into the center of the helix, had a large effect on insertion capabilities of the~\gls{tmh} via the translocon.
+Mutational experiments demonstrated that charged residues, when inserted into the centre of the helix, had a large effect on insertion capabilities of the~\gls{tmh} via the translocon.
 Insertion becomes more unfavourable when the charge was placed closer to the~\gls{tmh} core~\cite{Hessa2005}.
 
 It remains unclear exactly why and how exactly the positive charge determines topology from a biophysical perspective.
@@ -74,7 +74,7 @@ With sequence-based hydrophobicity and volume analysis and consensus sequence st
 Crucially, this asymmetry differs among the membrane of various organelles.
 They conclude that there are general differences between the lipid composition and organisation in membranes of the Golgi and~\gls{er}.
 Functional aspects are also important.
-For example, the abundance of serines in the region following the luminal end of Golgi~\gls{tmh}s appears to reflect the fact that this part of many Golgi enzymes forms a flexible linker that tethers the catalytic domain to the membrane~\cite{Sharpe2010}.
+For example, the abundance of serines in the region following the lumenal end of Golgi~\gls{tmh}s appears to reflect the fact that this part of many Golgi enzymes forms a flexible linker that tethers the catalytic domain to the membrane~\cite{Sharpe2010}.
 
 A study by Baeza-Delgado \textit{et al.}~\cite{Baeza-Delgado2013} analysed the distribution of amino acid residue types in~\gls{tmh}s in 170 integral membrane proteins from a manually maintained database of experimentally confirmed~\gls{tmp}s (MPTopo~\cite{Jayasinghe2001}) as well as in 930 structures from the~\gls{pdb}.
 As expected, half of the natural amino acids are equally distributed along~\gls{tmh} whereas aromatic, polar and charged amino acids along with proline are biased near the flanks of the TM helices.
@@ -101,7 +101,7 @@ With these large-scale datasets and a sensitive normalisation approach, new sequ
 
 \subsection{Acidic residues within and nearby~\gls{tmh} segments are rare}
 
-In order to reliably compare the amino acid sequence properties of~\gls{tmh}s, we assembled datasets of~\gls{tmh} proteins from what are likely to be the best in terms of quality and comprehensiveness of annotation in eukaryotic and prokaryotic representative genomes, as well as composite datasets to represent larger taxonomic groups and with regard to subcellular locations (see Table \ref{table:acidicresiduesarerare}).
+In order to reliably compare the amino acid sequence properties of~\gls{tmh}s, we assembled datasets of~\gls{tmh} proteins from what are likely to be the best in terms of quality and comprehensiveness of annotation in eukaryotic and prokaryotic representative genomes, as well as composite datasets to represent larger taxonomic groups and with regard to sub-cellular locations (see Table \ref{table:acidicresiduesarerare}).
 In total, 3292 single-pass~\gls{tmh} segments and 29898 multi-pass~\gls{tmh} segments were extracted from various UniProt~\cite{TheUniProtConsortium2014} text files according to TRANSMEM annotation (download dated 20--03--2016).
 The UniProt datasets used only included manually curated records; however, it is still necessary to check for systematic bias due to the prediction methods used by UniProt for~\gls{tmh} annotation in the majority of cases without direct experimental evidence.
 Therefore, a fully experimentally verified dataset was also generated for comparison.
@@ -109,8 +109,8 @@ The representative 1544 single-pass and 15563~\gls{tmh}s were extracted from the
 \gls{tmh} organelle residency is defined according to UniProt annotation.
 To ensure reliability, organelles were only analysed from a representative redundancy-reduced protein dataset of the most well-studied genome: Homo sapiens (referred to as UniHuman herein).
 The several datasets from UniProt  are subdivided into different human organelles (UniPM, UniER, UniGolgi) and taxonomical groups (UniHuman, UniCress, UniBacilli, UniEcoli, UniArch, UniFungi) as described in Table \ref{table:acidicresiduesarerare} (see also Methods section).
-As will be shown below, these various datasets allow us to validate our findings for a variety of conditions, namely with regard (i) to experimental verification of~\gls{tmh}s, (ii) to origin from various species and taxonomic groups, (iii) to the number of~\gls{tmh}s in the same protein as well as (iv) to subcellular localization.
-Datasets and programs used in this work can be downloaded from \url{http://mendel.bii.a-star.edu.sg/SEQUENCES/NNI/}.
+As will be shown below, these various datasets allow us to validate our findings for a variety of conditions, namely with regard (i) to experimental verification of~\gls{tmh}s, (ii) to origin from various species and taxonomic groups, (iii) to the number of~\gls{tmh}s in the same protein as well as (iv) to sub-cellular localisation.
+Data-sets and programs used in this work can be downloaded from \url{http://mendel.bii.a-star.edu.sg/SEQUENCES/NNI/}.
 
 % Table generated by Excel2LaTeX from sheet 'Sheet1'
 \begin{table}[htbp]
@@ -125,7 +125,7 @@ Datasets and programs used in this work can be downloaded from \url{http://mende
     \begin{tabular}{p{5em}rrp{5em}rrp{5em}rrp{5em}}
     \toprule
     \footnotesize
-    \multirow{2}[4]{*}{\textbf{Dataset}} & \multicolumn{3}{p{15em}}{\textbf{Acidic residues (D and E)}} & \multicolumn{3}{p{15em}}{\textbf{Aspartic acid (D only)}} & \multicolumn{3}{p{15em}}{\textbf{Glutamic acid (E only)}} \\
+    \multirow{2}[4]{*}{\textbf{Data-set}} & \multicolumn{3}{p{15em}}{\textbf{Acidic residues (D and E)}} & \multicolumn{3}{p{15em}}{\textbf{Aspartic acid (D only)}} & \multicolumn{3}{p{15em}}{\textbf{Glutamic acid (E only)}} \\
 \cmidrule{2-10}    \multicolumn{1}{l}{} & \multicolumn{1}{p{5em}}{\textbf{$\mu$ SP}} & \multicolumn{1}{p{5em}}{\textbf{$\mu$ MP}} & \specialcell{\textbf{H statistic}\\ \textbf{P value}} & \multicolumn{1}{p{5em}}{\textbf{$\mu$ SP}} & \multicolumn{1}{p{5em}}{\textbf{$\mu$ MP}} & \specialcell{\textbf{H statistic}} \textbf{P value} & \multicolumn{1}{p{5em}}{\textbf{$\mu$ SP}} & \multicolumn{1}{p{5em}}{\textbf{$\mu$ MP}} & \specialcell{\textbf{H statistic} \\ \textbf{P value}} \\
     \midrule
     ExpAll & 0.086 & 0.309 & \specialcell{148.1 \\ 4.50E-34} & 0.045 & 0.157 & \specialcell{40.3 \\ 2.13E-10} & 0.042 & 0.161 & \specialcell{46.6\\ 8.64E-12} \\
@@ -188,7 +188,7 @@ Yet, their occurrence is similar to those of histidine and tryptophan and, notab
 The observation that acidic residues are more suppressed in single-pass~\gls{tmh}s compared with the case of multi-pass~\gls{tmh}s is statistically significant.
 In Table \ref{table:acidicresiduesarerare}, the acidic residues are counted in the helices (excluding flanking regions) belonging to either multi-pass or single-pass helices.
 Indeed, single-pass helices appear to tolerate negative charge to a far lesser extent than multi-pass helices as the data in the top two rows of Table \ref{table:acidicresiduesarerare} indicates (for datasets UniHuman and ExpAll).
-The trend is strictly observed throughout subcellular localisations (rows 3--5 in Table \ref{table:acidicresiduesarerare}) and taxa (rows 6--10).
+The trend is strictly observed throughout sub-cellular localisations (rows 3--5 in Table \ref{table:acidicresiduesarerare}) and taxa (rows 6--10).
 Statistical significance (P≤0.001) is found in all but six cases.
 These are UniEcoli (D+E, D, E), UniArch (D+E, E) and UniFungi (E).
 The problem is, most likely, that the respective datasets are quite small.
@@ -264,7 +264,7 @@ The~\gls{kw} scores were calculated for negative residues by comparing the numbe
      \toprule
      \multicolumn{2}{p{10em}}{\textbf{Single-pass}} & \multicolumn{4}{p{20em}}{\textbf{Database-defined flanks}} & \multicolumn{4}{p{20em}}{\textbf{Flanks after central alignment}} \\
      \midrule
-     \multirow{2}[4]{*}{\textbf{Dataset}} & \multicolumn{1}{c}{\multirow{2}[4]{*}{\textbf{Helices}}} & \multicolumn{2}{p{10em}}{\textbf{Negative residues}} & \multicolumn{1}{c}{\multirow{2}[4]{*}{\textbf{H statistic}}} & \multicolumn{1}{c}{\multirow{2}[4]{*}{\textbf{P value}}} & \multicolumn{2}{p{10em}}{\textbf{Negative residues}} & \multicolumn{1}{c}{\multirow{2}[4]{*}{\textbf{H statistic}}} & \multicolumn{1}{c}{\multirow{2}[4]{*}{\textbf{P value}}} \\
+     \multirow{2}[4]{*}{\textbf{Data-set}} & \multicolumn{1}{c}{\multirow{2}[4]{*}{\textbf{Helices}}} & \multicolumn{2}{p{10em}}{\textbf{Negative residues}} & \multicolumn{1}{c}{\multirow{2}[4]{*}{\textbf{H statistic}}} & \multicolumn{1}{c}{\multirow{2}[4]{*}{\textbf{P value}}} & \multicolumn{2}{p{10em}}{\textbf{Negative residues}} & \multicolumn{1}{c}{\multirow{2}[4]{*}{\textbf{H statistic}}} & \multicolumn{1}{c}{\multirow{2}[4]{*}{\textbf{P value}}} \\
  \cmidrule{3-4}\cmidrule{7-8}    \multicolumn{1}{c}{} &       & \multicolumn{1}{p{5em}}{\textbf{Inside}} & \multicolumn{1}{p{5em}}{\textbf{Outside}} &       &       & \multicolumn{1}{p{5em}}{\textbf{Inside}} & \multicolumn{1}{p{5em}}{\textbf{Outside}} &       &  \\
      \midrule
      ExpAll & 1544  & 848   & 1648  & 258.59 & 3.47E-58 & 735   & 1541  & 262.29 & 5.44E-59 \\
@@ -360,7 +360,7 @@ The~\gls{kw} scores were calculated for negative residues by comparing the numbe
     \toprule
     \multicolumn{5}{ p{25em} }{Multi-pass} & \multicolumn{4}{p{20em} }{Database-defined flanks} & \multicolumn{4}{p{20em} }{Flanks after central alignment} \\
     \midrule
-    \multirow{2}[4]{*}{Dataset} & \multicolumn{1}{l }{\multirow{2}[4]{*}{IDs}} & \multicolumn{3}{p{15em} }{Helices} & \multicolumn{2}{p{10em} }{Negative residues} & \multicolumn{1}{l }{\multirow{2}[4]{*}{H statistic}} & \multicolumn{1}{l }{\multirow{2}[4]{*}{P value}} & \multicolumn{2}{p{10em} }{Negative residues} & \multicolumn{1}{l }{\multirow{2}[4]{*}{H statistic}} & \multicolumn{1}{l }{\multirow{2}[4]{*}{P value}} \\
+    \multirow{2}[4]{*}{Data-set} & \multicolumn{1}{l }{\multirow{2}[4]{*}{IDs}} & \multicolumn{3}{p{15em} }{Helices} & \multicolumn{2}{p{10em} }{Negative residues} & \multicolumn{1}{l }{\multirow{2}[4]{*}{H statistic}} & \multicolumn{1}{l }{\multirow{2}[4]{*}{P value}} & \multicolumn{2}{p{10em} }{Negative residues} & \multicolumn{1}{l }{\multirow{2}[4]{*}{H statistic}} & \multicolumn{1}{l }{\multirow{2}[4]{*}{P value}} \\
     \cmidrule{3-7}\cmidrule{10-11}    \multicolumn{1}{ l }{} &       & \multicolumn{1}{p{5em} }{\textit{n}} & \multicolumn{1}{p{5em} }{$\mu$} & \multicolumn{1}{p{5em} }{$\sigma$} & \multicolumn{1}{p{5em} }{Inside} & \multicolumn{1}{p{5em} }{Outside} &       &       & \multicolumn{1}{p{5em} }{Inside} & \multicolumn{1}{p{5em} }{Outside} &       &  \\
     \midrule
     ExpAll & 2205  & 15,563 & 7.07  & 3.95  & 9709  & 9598  & 0.04  & 8.43E-01 & 9648  & 9659  & 0.35  & 5.56E-01 \\
@@ -393,7 +393,7 @@ The~\gls{kw} scores were calculated for negative residues by comparing the numbe
     \toprule
     Multi-pass & \multicolumn{4}{p{20em} }{Overlapping flanks} & \multicolumn{8}{p{40em} }{Database-defined viable* flanks} \\
     \midrule
-    \multirow{2}[4]{*}{Dataset} & \multicolumn{2}{p{10em} }{Negative residues} & \multicolumn{1}{l }{\multirow{2}[4]{*}{H statistic}} & \multicolumn{1}{l }{\multirow{2}[4]{*}{P value}} & \multicolumn{1}{l }{\multirow{2}[4]{*}{\textit{N}}} & \multicolumn{2}{p{10em} }{Negative residues} & \multicolumn{1}{l }{\multirow{2}[4]{*}{H statistic}} & \multicolumn{4}{l }{\multirow{2}[4]{*}{P value}} \\
+    \multirow{2}[4]{*}{Data-set} & \multicolumn{2}{p{10em} }{Negative residues} & \multicolumn{1}{l }{\multirow{2}[4]{*}{H statistic}} & \multicolumn{1}{l }{\multirow{2}[4]{*}{P value}} & \multicolumn{1}{l }{\multirow{2}[4]{*}{\textit{N}}} & \multicolumn{2}{p{10em} }{Negative residues} & \multicolumn{1}{l }{\multirow{2}[4]{*}{H statistic}} & \multicolumn{4}{l }{\multirow{2}[4]{*}{P value}} \\
 \cmidrule{2-3}\cmidrule{7-8}    \multicolumn{1}{ l }{} & \multicolumn{1}{p{5em} }{Inside} & \multicolumn{1}{p{5em} }{Outside} &       &       &       & \multicolumn{1}{p{5em} }{Inside} & \multicolumn{1}{p{5em} }{Outside} &       & \multicolumn{4}{l }{} \\
     \midrule
     ExpAll & 11,969 & 12,615 & 22.54 & 2.05E-06 & 8808  & 6082  & 6916  & 59.93 & \multicolumn{4}{l }{9.81E-15} \\
@@ -443,17 +443,17 @@ Not only are there more negative charges within the multi-pass~\gls{tmh} itself 
 \subsection{Further significant sequence differences between single-pass and multi-pass helices: distribution of tryptophan, tyrosine, proline and cysteine}
 
 Amino acid residue profiles along the~\gls{tm} segment and its flanks differ between single- and multi-pass~\gls{tmh}s also in other aspects.
-The relative percentages of all amino acid types (normalization by the total amount of that residue type in the sequence segment) from single-pass helices of the UniHuman (Figure \ref{fig:comp_heatmaps}A; from 1705~\gls{tmh}s with flanks having 68571 residues) and ExpAll (Figure \ref{fig:comp_heatmaps}B; from 1544~\gls{tmh}s with flanks having 60200 residues) were plotted as a heatmap.
+The relative percentages of all amino acid types (normalisation by the total amount of that residue type in the sequence segment) from single-pass helices of the UniHuman (Figure \ref{fig:comp_heatmaps}A; from 1705~\gls{tmh}s with flanks having 68571 residues) and ExpAll (Figure \ref{fig:comp_heatmaps}B; from 1544~\gls{tmh}s with flanks having 60200 residues) were plotted as a heat-map.
 The amino acid types were listed on the Y axis according to Kyte \& Doolittle hydrophobicity~\cite{Kyte1982} in descending order.
 
 \begin{figure}[p]
 \centering
 \includegraphics[width=1\textwidth]{NNI_chapter/comp_heatmaps}
-\captionof{figure}[Relative percentage heatmaps from predictive and experimental datasets corroborate residue distribution differences between~\gls{tmh}s from single-pass and multi-pass proteins.]{\textbf{Relative percentage heatmaps from predictive and experimental datasets corroborate residue distribution differences between~\gls{tmh}s from single-pass and multi-pass proteins.}
+\captionof{figure}[Relative percentage heat-maps from predictive and experimental datasets corroborate residue distribution differences between~\gls{tmh}s from single-pass and multi-pass proteins.]{\textbf{Relative percentage heat-maps from predictive and experimental datasets corroborate residue distribution differences between~\gls{tmh}s from single-pass and multi-pass proteins.}
 The residue position aligned to the centre of the~\gls{tmh} is on the horizontal axis, and the residue type is on the vertical axis.
 Amino acid types are listed in order of decreasing hydrophobicity according to the Kyte and Doolittle scale [52].
 The flank lengths in the~\gls{tmh} segments were restricted to up to $\pm$10 residues.
-The scales for each heatmap are shown beneath the respective subfigure.
+The scales for each heat-map are shown beneath the respective subfigure.
 The darkest blue represents 0\% distribution, whilst the darkest red represents the maximum relative percentage distribution that is denoted by the keys in each subfigure, with white being 50\% between ``cold'' and ``hot''.
 The central~\gls{tmh} subplots extend from the central~\gls{tmh} residue, whereas the inner and outer flank subplots use the database-defined~\gls{tmh} boundary and extend from that position.
 a~\gls{tmh}s from the single-pass UniHuman dataset.
@@ -855,9 +855,9 @@ The existence of this bias has implications for topology prediction of proteins 
 
 It should be noted that the controversy in the scientific community about the existence of a negative charge bias at~\gls{tmh}s was mainly with regard to multi-pass~\gls{tmp}s.
 Despite having access to much larger, better annotated sequence datasets and many more 3D structures than our predecessors, we also had our share of difficulties here (see Results section III and Table 3).
-The straightforward approach results in inconclusive statistical tests if datasets become small (for example, if selections are restricted to subcellular localizations, 3D structures or if very harsh sequence redundancy criteria are applied) and, especially, if~\gls{tmh}s with very short or no flanks are included.
+The straightforward approach results in inconclusive statistical tests if datasets become small (for example, if selections are restricted to subcellular localisations, 3D structures or if very harsh sequence redundancy criteria are applied) and, especially, if~\gls{tmh}s with very short or no flanks are included.
 Therefore in the case of multi-pass proteins, we studied flanks as taken from the TM boundaries in the databases under several conditions: (i) without allowing flank overlap between neighbouring~\gls{tmh}s, (ii) as subset of (i) but with requiring some minimal flank length at either side, (iii) with overlapping flanks.
-We also studied flanks after central alignment of~\gls{tmh}s and assuming standardized~\gls{tmh} length.
+We also studied flanks after central alignment of~\gls{tmh}s and assuming standardised~\gls{tmh} length.
 Multi-pass~\gls{tmh}s (without overlapping flanks) do not show statistically significant negative charge bias under condition (i) but, apparently, due to many~\gls{tmh}s without any or super-short flanks at least at one side.
 Significance appears as soon as subsets of~\gls{tmh}s with flanks at both sides are studied.
 Not surprisingly, there is no charge bias if there are no flanks in the first place.
@@ -913,7 +913,7 @@ Complex~\gls{tmh}s, typically within multi-pass membrane proteins that have a fu
 \end{enumerate}
 
 The most representative precedent papers are those of Sharpe \textit{et al.}~\cite{Sharpe2010} from 2010 (with 1192 human and 1119 yeast single-pass~\gls{tmh}s), Baeza-Delgado \textit{et al.}~\cite{Baeza-Delgado2013} (with 792~\gls{tmh}s mixed from single- and multi-pass~\gls{tmp}s) and Pogozheva \textit{et al.}~\cite{Pogozheva2013} (\gls{tmh}s from 191 mixed from single- and multi-pass~\gls{tmp}s with structural information) both from 2013.
-Whereas the first analysis would have benefitted from the central alignment approach and the first two studies from another normalization as described above, the third study did come close to our findings.
+Whereas the first analysis would have benefited from the central alignment approach and the first two studies from another normalisation as described above, the third study did come close to our findings.
 To note, their dataset mixed with single- and multi-pass proteins was too small for revealing the negative charge bias with significance; yet, they observed total charge differences at either sides of the membrane varying for both single- and multi-pass proteins.
 Membrane asymmetry due to positively charged residues occurring more frequently on the cytosolic side causes net charge unevenness at both sides of the membrane.
 This observation has been known to correlate with orientation for decades~\cite{VonHeijne1989, Baeza-Delgado2013, Meindl-Beinker2006}.
@@ -990,7 +990,7 @@ It is hoped that the NNI/NO-rule as well as the other sequence properties of mem
 \subsubsection{Databases.}
 All datasets used for analysis are listed in Table \ref{table:acidicresiduesarerare}.
 Transmembrane protein sequences and annotations were taken from TOPDB~\cite{Dobson2015} and UniProt~\cite{TheUniProtConsortium2014}.
-UniProt derived datasets are the most comprehensive datasets built with (i) robust transmembrane prediction methods providing the limit of today’s achievable accuracy with regard to hydrophobic core localization and (ii) subcellular location annotation that can be used for orientation determination.
+UniProt derived datasets are the most comprehensive datasets built with (i) robust transmembrane prediction methods providing the limit of today’s achievable accuracy with regard to hydrophobic core localisation and (ii) subcellular location annotation that can be used for orientation determination.
 However, they mostly rely on predicted transmembrane regions.
 TOPDB has meticulous experimental verifications of the orientation from the literature that are independent of prediction algorithms~\cite{Dobson2015}.
 Unfortunately, this dataset is much smaller with too few entries to have it divided with regard to taxonomy or subcellular locations.
@@ -1085,7 +1085,7 @@ To remove the atypical lengths, cut-offs were set at 16 as the lower cut-off and
 We found that, for the single-pass~\gls{tmh}s in TOPDB, 1215 out of 1544 are within the length limits (78.7\%).
 Among the 17141 multi-pass~\gls{tmh}s, we find 15563 within our global length limits (from 2205 TOPDB records corresponding to 2281 UniProt entries).
 This removed 1578 very short~\gls{tmh}s and none of the long~\gls{tmh}s.
-Our cut-off selection is very similar to the one by Baeza-Delgado etal.~\cite{Baeza-Delgado2013}.
+Our cut-off selection is very similar to the one by Baeza-Delgado \textit{et al.}~\cite{Baeza-Delgado2013}.
 
 To get an idea of the taxonomical breakdown in the ExpAll dataset, the UniProt ID tags were extracted and mapped to UniProtKB.
 The combined dataset of multi-pass (single-pass) proteins was mapped to 1288 (1343) eukaryotic records, 404 (776) of which were human records, 926 (191) bacterial records, 46 (5) archaea records, and 14 (22) viral records.
@@ -1095,7 +1095,7 @@ The combined dataset of multi-pass (single-pass) proteins was mapped to 1288 (13
 This is a set of mostly human~\gls{tmh}-containing proteins or their close mammalian homologues.
 UniProtKB contains 5187 human protein records that are manually annotated with TRANSMEM regions (query = ``annotation:(type:transmem) AND reviewed:yes AND organism:``Homo sapiens (Human) [9606]'' AND proteome:up000005640''.
 To reduce sequence redundancy, these sequences were submitted to UniRef90~\cite{Suzek2015}.
-To note, Uniref90 was chosen over Uniref50 to maintain a viable size of datasets for statistical analysis of occurrence of negatively charged residue, which are very rare in the vicinity of~\gls{tmh}s.
+To note, UniRef90 was chosen over UniRef50 to maintain a viable size of datasets for statistical analysis of occurrence of negatively charged residue, which are very rare in the vicinity of~\gls{tmh}s.
 5015 UniRef90 clusters represented the 5187 sequences.
 A list of sequences representing those clusters was submitted back to UniProtKB resulting and 5014 representative entries were recovered.
 There is a small issue in that the list of representatives from UniRef includes non-canonical isoforms, while the batch retrieve query of UniProtKB only supports complete entries, i.e.
@@ -1147,8 +1147,8 @@ Of those there were 1146 with suitable TOPO\textunderscore DOM annotation for to
 
 \subsubsection{UniFungi}
 For the Fungi dataset, the query ``annotation:(type:transmem) taxonomy:``Fungi [4751]'' AND reviewed:yes'' was used.
-This returned 5628 records that were submitted to Uniref90.
-Uniref90 identified 4934 representative records, all of which were successfully mapped back to UniProtKB.
+This returned 5628 records that were submitted to UniRef90.
+UniRef90 identified 4934 representative records, all of which were successfully mapped back to UniProtKB.
 Of those, 2070 had suitable annotation for orientation.
 1990 records belonged to Ascomycota including 1243 Saccharomycetales.
 73 were Basidomycota, and 6 were Apansporoblastina.
@@ -1159,7 +1159,7 @@ One~\gls{tmh} from UniFungi was discounted from P32897 due to an unknown positio
 
 \subsubsection{UniEcoli}
 This dataset was generated by querying UniProt with ``reviewed:yes AND organism:''Escherichia coli (strain K12)[83333]'''' which returned 941 hits.
-The hits were submitted to Uniref90, which returned 935 clusters.
+The hits were submitted to UniRef90, which returned 935 clusters.
 The representative IDs were then resubmitted to UniProtKB, all of which returned successfully.
 934 were from Bacteria, whilst one were from lambdalike viruses.
 Of the bacterial records, 862 were from various Escherichia species of which 565 were from E.
@@ -1168,16 +1168,16 @@ This dataset contains 54 single-pass proteins and 3888 helices from 529 multi-pa
 
 \subsubsection{UniBacilli}
 The Bacilli dataset was constructed by querying UniProt for ``reviewed:yes AND taxonomy:''Bacilli''''.
-This returned 5044 records, which were submitted to Uniref90.
-2,591 clusters were found in Uniref from these records.
+This returned 5044 records, which were submitted to UniRef90.
+2,591 clusters were found in UniRef from these records.
 The representative IDs were successfully resubmitted to UniProtKB.
 2031 of these were of the genus Bacillales whilst 560 were also of the genus Lactobacillales.
 This dataset contains 124 single-pass proteins and 822 helices from 140 multi-pass proteins.
 
 \subsubsection{UniArch}
 The Archaea dataset was constructed by querying UniProt for ``reviewed:yes AND taxonomy:''Archaea [2157]''''.
-This returned 1,152 records, which were submitted to Uniref90.
-1,054 clusters were found in Uniref from these records.
+This returned 1,152 records, which were submitted to UniRef90.
+1,054 clusters were found in UniRef from these records.
 The representative IDs were successfully resubmitted to UniProtKB.
 946 records belonged to the Euyarchaeota, 101 to Thermoprotei, 4 to Thaumarchaeota, and 3 to Korarchaeum cryptofilum.
 This dataset contains 48 single-pass proteins and 59 multi-pass proteins containing 327 helices from 59 proteins.
@@ -1265,7 +1265,7 @@ The second form of boundary point definition for flank determination was achieve
 Though there is some length variation among~\gls{tmh}s, most of them are centred around a length of 20-22 residues.
 In this case, flanks are the sequence extensions beyond the standardised-length 21-residues~\gls{tmh}s.
 We define the inside flanking segments as the positions -20 to -10 and the outside flanking regions to be +10 to +20 from the central~\gls{tmh} residue (with the label ``0'').
-Instead of emphasizing some artificially selected boundary residue, this definition allows the average~\gls{tmh} boundary transition to become apparent.
+Instead of emphasising some artificially selected boundary residue, this definition allows the average~\gls{tmh} boundary transition to become apparent.
 
 \subsection{Separating simple and complex single-pass helices.}
 
@@ -1294,16 +1294,16 @@ Following~\cite{Sharpe2010}, the absolute relative occurrence  of this amino aci
 
 
 Here, the denominator is the maximal number of all residues in any alignment column (i.e., the number of sequences in the alignment) and, to emphasise, this will make  mostly dependent on the most abundant residue types.
-This type of normalization reveals the most preferred residue types at given sequence positions.
+This type of normalisation reveals the most preferred residue types at given sequence positions.
 
-Our second normalization method is independent of the abundance of any amino acid types other than the studied one; it answers the question: ``If there is a residue of type  in the~\gls{tmh}-containing segment, where would it most likely be?'' This relative occurrence  calculated in Equation~\ref{eq:independent_normalisation} as:
+Our second normalisation method is independent of the abundance of any amino acid types other than the studied one; it answers the question: ``If there is a residue of type  in the~\gls{tmh}-containing segment, where would it most likely be?'' This relative occurrence  calculated in Equation~\ref{eq:independent_normalisation} as:
 
  \begin{equation} \label{eq:independent_normalisation}
    q_{i,r}=\frac{{100}\cdot{a_{i,r}}}{a_i}
  \end{equation}
 
 The value  is the total abundance of residues of just amino acid type  in a given alignment of~\gls{tmh}-containing segments (i.e., in the~\gls{tmh} together with its two adjoining flanks summed over all cases of~\gls{tmh}s in the given dataset).
-Peaks in as function of r reveal the prefered positions of residues of type i.
+Peaks in as function of r reveal the preferred positions of residues of type i.
 The difference in   and   normalisation is visualised in Figure~\ref{fig:normalisation}.
 
 \begin{figure}[!ht]
@@ -1332,7 +1332,7 @@ The leucine hotspot is no longer very pronounced, as the leucines are quite even
 
 \subsection{Hydrophobicity calculations}
 
-Hydrophobicity profiles were calculated using the Kyte \& Doolittle hydrophobicity scale~\cite{Kyte1982} and validated with the Eisenberg scale~\cite{Eisenberg1984}, the Hessa biological scale~\cite{Hessa2005}, and the White and Wimley whole residuescale~\cite{White1999}(Figure~\ref{fig:hydrophobicity_scale_comparison}).
+Hydrophobicity profiles were calculated using the Kyte \& Doolittle hydrophobicity scale~\cite{Kyte1982} and validated with the Eisenberg scale~\cite{Eisenberg1984}, the Hessa biological scale~\cite{Hessa2005}, and the White and Wimley whole residue scale~\cite{White1999}(Figure~\ref{fig:hydrophobicity_scale_comparison}).
 The hydrophobicity profile uses un-weighted windowing of the residue hydrophobicity scores from end to end of the TMD slice.
 Three residues were used as full window lengths and partial windows were permitted.
 
