working on TA draft

--- a/chapter_introduction.tex
+++ b/chapter_introduction.tex
@@ -209,13 +209,13 @@ Nanodiscs overcome some of the major challenges caused by the hydrophobic helice
 
 
 \subsection{The Importance Of Transmembrane Proteins}
-Membrane bound proteins underpin almost every biological process directly, or indirectly, from photosynthesis to respiration.
+Membrane-bound proteins underpin almost every biological process directly, or indirectly, from photosynthesis to respiration.
 Integral \gls{tmp} are encoded by between a third to a half of the genes in the human genome which reflects their biological importance~\cite{Hopkins2002, Almen2009, Wang2013}.
 These proteins allow biochemical pathways that traverse the various biological membranes used in life.
 %citation for drug targets
 
 %Function is a result of the structure, and here the structure and sequence are supposedly very relatable.
-The relationship between the membrane and \gls{tmp}s is underpinned by complex thermodynamic and electrostatic equilibrium.
+The relationship between the membrane and \gls{tmp}s is underpinned by complex thermodynamic and  electrostatic equilibrium.
 Once inserted the protein doesn't leave the membrane as a result of the \gls{tmh} being very hydrophobic.
 This hydrophobicity and the hydrophobicity of the lipid tails means that they self-associate and this association is entropically driven by water.
 Another way of describing it is that they fiercely dissociate from the water.
